# hexlet-polymorphism

./: Makefile  README.md  main.py  pyproject.toml  readme_m4_p04_L10_strategy_pattern.md  readme_m4_p04_L11_strategy_(pattern).md  readme_m4_p04_L2_.py  readme_m4_p04_L2_parametric_polymorphism.py  readme_m4_p04_L3_Key-based_dispatching_(data).py  readme_m4_p04_L4_key_(function)_dispatching.py  readme_m4_p04_L5_key_(file)_dispatching.py  readme_m4_p04_L6_polymorphism.py  readme_m4_p04_L7_null_object_pattern.py  readme_m4_p04_L8_code_that_kills_polymorphism.md  readme_m4_p04_L9_dependency_inversion.md
src/: circle.py  dispatcher.py  fake_subscription.py  guest.py  in_memory_kv.py  main.py  solution.py  square.py  tic_tac_toe.py  user.py  weather_service.py
src/scripts/: weather.py
src/strategies/: easy.py  normal.py
tests/: test_file_kv.py  test_in_memory_kv.py  test_solution.py  test_weather_service.py
tests/fixtures/: database.custom.json  database.development.json  database.production.json
