[project]
name = "hexlet-polymorphism"
version = "0.1.0"
description = "Exercise"
authors = [{name = "AkaSmall"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.pytest.ini_options]
python_files = "tests.py"
