[project]
name = "hexlet-polymorphism"
version = "0.1.0"
description = "Exercise"
authors = [{name = "AkaSmall"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.4.0",
    "flask>=3.1.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
